--- a/index.html
+++ b/index.html
@@ -8,17 +8,22 @@
 </head>
 <body>
     <header>
-        <h1>Świat Tlenków: Kompleksowy Przewodnik</h1>
-        <nav>
-            <ul>
-                <li><a href="#wstep">Wprowadzenie</a></li>
-                <li><a href="#typy">Typy Tlenków</a></li>
-                <li><a href="#wlasciwosci">Właściwości</a></li>
-                <li><a href="#przyklady">Przykłady i Zastosowania</a></li>
-                <li><a href="#galeria">Galeria</a></li>
-            </ul>
-        </nav>
-    </header>
+    <h1>Świat Tlenków: Kompleksowy Przewodnik</h1>
+    <nav>
+        <ul>
+            <li><a href="#wstep">Wprowadzenie</a></li>
+            <li class="menu-rozwijane"> <a href="#typy">Typy Tlenków <span class="strzalka-dol"></span></a> <ul class="zawartosc-rozwijana"> <li><a href="tlenki-kwasowe.html">Tlenki Kwasowe</a></li>
+                    <li><a href="tlenki-zasadowe.html">Tlenki Zasadowe</a></li>
+                    <li><a href="tlenki-amfoteryczne.html">Tlenki Amfoteryczne</a></li>
+                    <li><a href="tlenki-obojetne.html">Tlenki Obojętne</a></li>
+                </ul>
+            </li>
+            <li><a href="#wlasciwosci">Właściwości</a></li>
+            <li><a href="#przyklady">Przykłady i Zastosowania</a></li>
+            <li><a href="#galeria">Galeria</a></li>
+        </ul>
+    </nav>
+</header>
 
     <main>
         <section id="wstep" class="wstep">
@@ -68,8 +73,8 @@
             <h2>Właściwości Fizyczne i Chemiczne</h2>
             <p>Właściwości tlenków są bardzo zróżnicowane i zależą od rodzaju pierwiastka, z którym tlen jest związany. Mogą być gazami, cieczami lub ciałami stałymi w temperaturze pokojowej. Niektóre są rozpuszczalne w wodzie, inne nie.</p>
             <ul>
-                <li><strong>Stan skupienia:</strong> Od gazowego ($CO_2$) do stałego ($SiO_2$).</li>
-                <li><strong>Rozpuszczalność w wodzie:</strong> Niektóre tlenki, jak $Na_2O$, są dobrze rozpuszczalne, tworząc zasady. Inne, jak $Fe_2O_3$, są praktycznie nierozpuszczalne.</li>
+                <li><strong>Stan skupienia:</strong> Od gazowego (CO_2) do stałego (SiO_2).</li>
+                <li><strong>Rozpuszczalność w wodzie:</strong> Niektóre tlenki, jak Na_2O, są dobrze rozpuszczalne, tworząc zasady. Inne, jak Fe_2O_3, są praktycznie nierozpuszczalne.</li>
                 <li><strong>Reaktywność:</strong> Różnią się od bardzo reaktywnych (tlenki metali alkalicznych) do bardzo stabilnych (tlenki metali szlachetnych).</li>
             </ul>
             <div class="obrazy">
@@ -135,7 +140,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Strona o Tlenkach. Wszelkie prawa zastrzeżone.</p>
+        <p>&copy; 2025 Strona o Tlenkach.</p>
     </footer>
 
     <script src="script.js"></script>
