--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <nav>
         <ul>
             <li><a href="#wstep">Wprowadzenie</a></li>
-            <li class="menu-rozwijane"> <a href="#typy">Typy Tlenków <span class="strzalka-dol"></span></a> <ul class="zawartosc-rozwijana"> <li><a href="tlenki-kwasowe.html">Tlenki Kwasowe</a></li>
-                    <li><a href="tlenki-zasadowe.html">Tlenki Zasadowe</a></li>
-                    <li><a href="tlenki-amfoteryczne.html">Tlenki Amfoteryczne</a></li>
+            <li class="menu-rozwijane"> <a href="#typy">Typy Tlenków <span class="strzalka-dol"></span></a> <ul class="zawartosc-rozwijana"> 
+                    <li><a href="tlenki-kwasowe.html">Tlenki Kwasowe</a></li>
+                    <li><a href="tlenki_zasadowe.html">Tlenki Zasadowe</a></li>
+                    <li><a href="tlenki-atmosferyczne.html">Tlenki Amfoteryczne</a></li>
                     <li><a href="tlenki-obojetne.html">Tlenki Obojętne</a></li>
                 </ul>
             </li>
