--- a/tlenki_zasadowe.html
+++ b/tlenki_zasadowe.html
@@ -16,9 +16,9 @@
                     <a href="index.html#typy" class="aktywny">Typy Tlenków <span class="strzalka-dol"></span></a>
                     <ul class="zawartosc-rozwijana">
                         <li><a href="tlenki-kwasowe.html">Tlenki Kwasowe</a></li>
-                        <li><a href="tlenki-zasadowe.html" class="aktywny">Tlenki Zasadowe</a></li>
-                        <li><a href="tlenki-amfoteryczne.html">Tlenki Amfoteryczne</a></li>
-                        <li><a href="tlenki-obojetne.html">Tlenki Obojętne</a></li>
+                    <li><a href="tlenki_zasadowe.html" class="aktywny">Tlenki Zasadowe</a></li>
+                    <li><a href="tlenki-atmosferyczne.html">Tlenki Amfoteryczne</a></li>
+                    <li><a href="tlenki-obojetne.html">Tlenki Obojętne</a></li>
                     </ul>
                 </li>
                 <li><a href="index.html#wlasciwosci">Właściwości</a></li>
