--- a/tlenki-kwasowe.html
+++ b/tlenki-kwasowe.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html#wstep">Wprowadzenie</a></li>
                 <li class="menu-rozwijane">
-                    <a href="index.html#typy" class="aktywny">Typy Tlenków <span class="strzalka-dol"></span></a>
+                    <a href="" class="aktywny">Typy Tlenków <span class="strzalka-dol"></span></a>
                     <ul class="zawartosc-rozwijana">
                         <li><a href="tlenki-kwasowe.html" class="aktywny">Tlenki Kwasowe</a></li>
                     <li><a href="tlenki_zasadowe.html">Tlenki Zasadowe</a></li>
