--- a/tlenki-atmosferyczne.html
+++ b/tlenki-atmosferyczne.html
@@ -58,8 +58,7 @@
                 </li>
             </ul>
             <div class="obrazy">
-                <img src="miedz.jpg" alt="Schemat reakcji tlenku amfoterycznego" class="obraz">
-                <p class="podpis">Tlenki amfoteryczne mogą reagować zarówno z kwasami, jak i z zasadami, dostosowując swój charakter chemiczny.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qLcKpAQeKC8?si=bP_OliKlTIoYwRv6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <p>Amfoteryczny charakter tlenków jest wykorzystywany w wielu procesach przemysłowych, takich jak metalurgia (np. w procesie pozyskiwania glinu) czy w produkcji specjalistycznych materiałów.</p>
         </section>
