--- a/tlenki-kwasowe.html
+++ b/tlenki-kwasowe.html
@@ -48,8 +48,7 @@
                 </li>
             </ul>
             <div class="obrazy">
-                <img src="krzem.jpg" alt="Schemat reakcji tlenku kwasowego z wodą" class="obraz">
-                <p class="podpis">Przykładowy schemat reakcji tlenku kwasowego z wodą.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/GzN7npu-r04?si=S3E9PZYVYcgqo5Ki" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <p>Tlenki kwasowe są powszechnie spotykane w przemyśle i naturze, często jako produkty spalania paliw kopalnych, przyczyniając się do zjawisk takich jak kwaśne deszcze.</p>
         </section>
