--- a/tlenki-obojetne.html
+++ b/tlenki-obojetne.html
@@ -55,8 +55,7 @@
                 </li>
             </ul>
             <div class="obrazy">
-                <img src="tltnki.webp" alt="Molekularna struktura tlenku węgla" class="obraz">
-                <p class="podpis">Tlenek węgla ($CO$) jest klasycznym przykładem tlenku obojętnego – stabilnego i niereagującego z kwasami ani zasadami.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qLcKpAQeKC8?si=bP_OliKlTIoYwRv6&amp;start=83" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <p>Choć tlenki obojętne są chemicznie mało reaktywne, wiele z nich ma istotne zastosowania lub jest ważnymi składnikami atmosfery (np. jako zanieczyszczenia powietrza).</p>
         </section>
