--- a/tlenki_zasadowe.html
+++ b/tlenki_zasadowe.html
@@ -47,8 +47,7 @@
                 </li>
             </ul>
             <div class="obrazy">
-                <img src="6.jpg" alt="Schemat reakcji tlenku zasadowego z wodą" class="obraz">
-                <p class="podpis">Przykładowy schemat reakcji tlenku zasadowego z wodą.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kLic97rqsKc?si=Eaj3n8TI6KoDDf-2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <p>Tlenki zasadowe są szeroko stosowane w budownictwie (np. wapno palone), rolnictwie, do odkwaszania gleby oraz w przemyśle chemicznym.</p>
         </section>
