--- a/tlenki-atmosferyczne.html
+++ b/tlenki-atmosferyczne.html
@@ -31,13 +31,13 @@
     <main>
         <section class="wstep">
             <h2>Czym są Tlenki Amfoteryczne?</h2>
-            <p>**Tlenki amfoteryczne** to wyjątkowa grupa tlenków, które potrafią reagować zarówno z **kwasami**, jak i z **zasadami**. Oznacza to, że w zależności od środowiska, mogą zachowywać się jak tlenki zasadowe (reagując z kwasami) lub jak tlenki kwasowe (reagując z zasadami).</p>
+            <p>Tlenki amfoteryczne to wyjątkowa grupa tlenków, które potrafią reagować zarówno z kwasami, jak i z zasadami. Oznacza to, że w zależności od środowiska, mogą zachowywać się jak tlenki zasadowe (reagując z kwasami) lub jak tlenki kwasowe (reagując z zasadami).</p>
             <p>Ich amfoteryczny charakter wynika z położenia pierwiastka w układzie okresowym – zazwyczaj są to tlenki metali na średnim stopniu utlenienia lub niektórych niemetali.</p>
 
             <h3>Przykłady i Reakcje:</h3>
             <p>Najważniejsze tlenki amfoteryczne to:</p>
             <ul>
-                <li>**Tlenek glinu (Al_2O_3)**
+                <li>Tlenek glinu (Al_2O_3)
                     <br>Tlenek glinu jest białą substancją stałą, głównym składnikiem boksytu.
                     <br><strong>Reakcja z kwasem (zachowanie zasadowe):</strong>
                     <br> Al_2O_3 + 6HCl 
@@ -47,7 +47,7 @@
                     <br> (Tlenek glinu reaguje z wodorotlenkiem sodu w obecności wody, tworząc tetrahydroksoglinian sodu.)
                 </li>
                 <br>
-                <li>**Tlenek cynku (ZnO)**
+                <li>Tlenek cynku (ZnO)
                     <br>Biały proszek, często używany jako pigment (biel cynkowa) lub w kosmetykach.
                     <br><strong>Reakcja z kwasem (zachowanie zasadowe):</strong>
                     <br> ZnO + 2HCl 
