--- a/tlenki-obojetne.html
+++ b/tlenki-obojetne.html
@@ -31,25 +31,25 @@
     <main>
         <section class="wstep">
             <h2>Czym są Tlenki Obojętne?</h2>
-            <p>**Tlenki obojętne**, znane również jako **tlenki neutralne**, stanowią niewielką grupę tlenków, które **nie reagują ani z kwasami, ani z zasadami**. Oznacza to, że nie wykazują ani charakteru kwasowego, ani zasadowego i nie tworzą soli w typowych reakcjach kwasowo-zasadowych.</p>
+            <p>Tlenki obojętne, znane również jako tlenki neutralne, stanowią niewielką grupę tlenków, które nie reagują ani z kwasami, ani z zasadami. Oznacza to, że nie wykazują ani charakteru kwasowego, ani zasadowego i nie tworzą soli w typowych reakcjach kwasowo-zasadowych.</p>
             <p>Są to związki chemicznie bardzo stabilne i mało reaktywne w temperaturze pokojowej oraz w obecności wody.</p>
 
             <h3>Przykłady i Charakterystyka:</h3>
             <p>Do najważniejszych tlenków obojętnych zaliczamy:</p>
             <ul>
-                <li>**Tlenek węgla (CO)**
+                <li>Tlenek węgla (CO)
                     <br>Bezbarwny, bezwonny i silnie trujący gaz. Powstaje w wyniku niecałkowitego spalania węgla lub związków organicznych.
-                    <br> $2C + O_2 
-                    <br>Mimo swojej toksyczności, $CO$ jest ważnym surowcem w przemyśle chemicznym, np. do syntezy metanolu.
+                    <br> 2C + O_2 
+                    <br>Mimo swojej toksyczności, CO jest ważnym surowcem w przemyśle chemicznym, np. do syntezy metanolu.
                 </li>
                 <br>
-                <li>**Tlenek azotu (NO)**
-                    <br>Bezbarwny gaz, który w kontakcie z tlenem z powietrza szybko utlenia się do brązowo-czerwonego dwutlenku azotu ($NO_2$).
-                    <br> $2NO + O_2 
+                <li>Tlenek azotu (NO)
+                    <br>Bezbarwny gaz, który w kontakcie z tlenem z powietrza szybko utlenia się do brązowo-czerwonego dwutlenku azotu (NO_2).
+                    <br> 2NO + O_2 
                     <br>W organizmach biologicznych pełni funkcję ważnego neuroprzekaźnika.
                 </li>
                 <br>
-                <li>**Podtlenek azotu (N_2O)**
+                <li>Podtlenek azotu (N_2O)
                     <br>Znany jako "gaz rozweselający" ze względu na swoje właściwości narkotyczne i euforyzujące. Jest bezbarwnym gazem o słodkawym zapachu.
                     <br>Stosowany w medycynie jako środek znieczulający oraz w przemyśle spożywczym (np. jako gaz do spieniania bitej śmietany).
                 </li>
