--- a/tlenki_zasadowe.html
+++ b/tlenki_zasadowe.html
@@ -31,23 +31,24 @@
     <main>
         <section class="wstep">
             <h2>Czym są Tlenki Zasadowe?</h2>
-            <p>Tlenki zasadowe to związki tlenu z **metalami** (zazwyczaj metalami grup 1 i 2 układu okresowego), które w reakcji z wodą tworzą zasady, lub z kwasami tworzą sole i wodę. Posiadają charakter zasadowy.</p>
+            <p>Tlenki zasadowe to związki tlenu z metalami (zazwyczaj metalami grup 1 i 2 układu okresowego), które w reakcji z wodą tworzą zasady, lub z kwasami tworzą sole i wodę. Posiadają charakter zasadowy.</p>
             <h3>Przykłady i Reakcje:</h3>
             <ul>
-                <li>**Tlenek sodu (Na_2O)**: Białe, silnie higroskopijne ciało stałe. Z wodą tworzy wodorotlenek sodu (mocną zasadę).
-                    <br> $Na_2O + H_2O 
+                <li>Tlenek sodu (Na_2O): Białe, silnie higroskopijne ciało stałe. Z wodą tworzy wodorotlenek sodu (mocną zasadę).
+                    <br> Na_2O + H_2O 
                 </li>
-                <li>**Tlenek potasu (K_2O)**: Podobnie jak tlenek sodu, reaguje z wodą tworząc wodorotlenek potasu.
-                    <br> $K_2O + H_2O 
+                <li>Tlenek potasu (K_2O): Podobnie jak tlenek sodu, reaguje z wodą tworząc wodorotlenek potasu.
+                    <br> K_2O + H_2O 
                 </li>
-                <li>**Tlenek wapnia (CaO)**: Znany jako wapno palone, białe ciało stałe. Reaguje z wodą, tworząc wodorotlenek wapnia (wapno gaszone), proces ten to gaszenie wapna.
-                    <br> $CaO + H_2O 
-                <li>**Tlenek magnezu (MgO)**: Białe ciało stałe, słabo rozpuszczalne w wodzie, ale łatwo reaguje z kwasami.
-                    <br> $MgO + 2HCl 
+                <li>Tlenek wapnia (CaO): Znany jako wapno palone, białe ciało stałe. Reaguje z wodą, tworząc wodorotlenek wapnia (wapno gaszone), proces ten to gaszenie wapna.
+                    <br> CaO + H_2O 
+                <li>Tlenek magnezu (MgO): Białe ciało stałe, słabo rozpuszczalne w wodzie, ale łatwo reaguje z kwasami.
+                    <br> MgO + 2HCl 
                 </li>
             </ul>
             <div class="obrazy">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/kLic97rqsKc?si=Eaj3n8TI6KoDDf-2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                
             </div>
             <p>Tlenki zasadowe są szeroko stosowane w budownictwie (np. wapno palone), rolnictwie, do odkwaszania gleby oraz w przemyśle chemicznym.</p>
         </section>
