--- a/tlenki-kwasowe.html
+++ b/tlenki-kwasowe.html
@@ -31,20 +31,20 @@
     <main>
         <section class="wstep">
             <h2>Czym są Tlenki Kwasowe?</h2>
-            <p>Tlenki kwasowe to związki tlenu z **niemetalami** (lub metalami na wysokich stopniach utlenienia), które w reakcji z wodą tworzą kwasy, lub z zasadami tworzą sole i wodę. Są to zazwyczaj substancje o charakterze kwasowym.</p>
+            <p>Tlenki kwasowe to związki tlenu z niemetalami (lub metalami na wysokich stopniach utlenienia), które w reakcji z wodą tworzą kwasy, lub z zasadami tworzą sole i wodę. Są to zazwyczaj substancje o charakterze kwasowym.</p>
             <h3>Przykłady i Reakcje:</h3>
             <ul>
-                <li>**Dwutlenek węgla (CO_2)**: Powstaje podczas spalania związków organicznych. Rozpuszcza się w wodzie, tworząc nietrwały kwas węglowy (H_2CO_3).
-                    <br> $CO_2 + H_2O 
+                <li>Dwutlenek węgla (CO_2): Powstaje podczas spalania związków organicznych. Rozpuszcza się w wodzie, tworząc nietrwały kwas węglowy (H_2CO_3).
+                    <br> CO_2 + H_2O 
                 </li>
-                <li>**Dwutlenek siarki (SO_2)**: Powstaje przy spalaniu siarki i paliw kopalnych. Reaguje z wodą, tworząc kwas siarkowy(IV) (H_2SO_3).
+                <li>Dwutlenek siarki (SO_2): Powstaje przy spalaniu siarki i paliw kopalnych. Reaguje z wodą, tworząc kwas siarkowy(IV) (H_2SO_3).
                     <br> SO_2 + H_2O 
                 </li>
-                <li>**Tlenek siarki(VI) (SO_3)**: Silny tlenek kwasowy, higroskopijny. Z wodą tworzy kwas siarkowy(VI) (H_2SO_4).
-                    <br> $SO_3 + H_2O 
+                <li>Tlenek siarki(VI) (SO_3): Silny tlenek kwasowy, higroskopijny. Z wodą tworzy kwas siarkowy(VI) (H_2SO_4).
+                    <br> SO_3 + H_2O 
                 </li>
-                <li>**Tlenek azotu(V) (N_2O_5)**: Bezbarwne ciało stałe, silnie higroskopijne. Z wodą tworzy kwas azotowy (HNO_3).
-                    <br> $N_2O_5 + H_2O 
+                <li>Tlenek azotu(V) (N_2O_5): Bezbarwne ciało stałe, silnie higroskopijne. Z wodą tworzy kwas azotowy (HNO_3).
+                    <br> N_2O_5 + H_2O 
                 </li>
             </ul>
             <div class="obrazy">
